Fix site url in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 baseurl: ""
-url : "https://thomasbillington.github.io"
+url : "https://thomasbillington.co.uk"
 
 # Blog Settings
 theme_settings :
