Fix Twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ theme_settings :
     email:  contact@thomasbillington.co.uk
     linkedin: TomBillingtonUK
     github: TomBillingtonUK
-    twitter: TomBillingtonUKß
+    twitter: TomBillingtonUK
 
   # Disqus
   disqus_shortname :
